# molecule-tokenization

./: README.md  pyproject.toml  requirements.txt
algorithms/downstream_finetune/: __init__.py  algo.py
algorithms/tokenizer_benchmark/: __init__.py  algo.py
configurations/: config.yaml
configurations/algorithm/: ape_classifier.yaml  ape_classifier_pretrained_hiv.yaml  ape_roberta.yaml  ape_roberta_pretrained.yaml  base_roberta.yaml  base_tokenizer.yaml  bpe_classifier.yaml  bpe_classifier_pretrained_bbbp.yaml  bpe_classifier_pretrained_hiv.yaml  bpe_roberta.yaml  bpe_roberta_pretrained.yaml  fragsmiles_classifier.yaml  fragsmiles_roberta.yaml  pcatt_classifier.yaml  pcatt_roberta.yaml  ps_fragsmiles_classifier.yaml  ps_fragsmiles_roberta.yaml  smirk_classifier.yaml  smirk_pcatt_classifier.yaml  smirk_pcatt_roberta.yaml  smirk_roberta.yaml  spe_classifier.yaml  spe_roberta.yaml  train_ape.yaml  train_bpe.yaml  train_fragsmiles.yaml  train_pcatt.yaml  train_ps_fragsmiles.yaml  train_smirk.yaml  train_smirk_gpe.yaml  train_smirk_pcatt.yaml  train_spe.yaml  train_tsmiles.yaml  tsmiles_classifier.yaml  tsmiles_roberta.yaml
configurations/dataset/: base_dataset.yaml  molnet_bbbp.yaml  molnet_hiv.yaml  molnet_tox21.yaml  pubchem10m.yaml  pubchem10m_mlm_train.yaml  pubchem10m_tokenizer_train.yaml  qm9.yaml
configurations/experiment/: base_pytorch.yaml  downstream_classification.yaml  tokenizer_benchmark.yaml  tokenizer_training.yaml
data/: README.md
datamodules/: README.md
datamodules/molecule_datasets/: __init__.py  molnet.py  pubchem10m.py  pubchem10m_mlm_train.py  pubchem10m_tokenizer_train.py  qm9.py
experiments/: __init__.py  downstream_classification.py  example_classification.py  tokenizer_benchmark.py  tokenizer_training.py
scripts/: submit_gpu.sh  submit_gpu_long.sh  submit_long.sh  submit_normal.sh
utils/: fragsmiles_tokenizer.py  fragsmiles_utils.py  ps_fragsmiles_tokenizer.py  ps_fragsmiles_utils.py  safe_utils.py  smirk_pcatt_adapter.py  smirk_pcatt_tokenizer.py  spe_tokenizer.py  timeout_utils.py  tsmiles_tokenizer.py  tsmiles_utils.py
utils/ps/: mol_bpe_ring.py  molecule.py  ps_encode.py  requirements.txt
utils/ps/utils/: chem_utils.py  logger.py
