[project]
name = "molecule-tokenization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "colorama>=0.4.6",
    "einops>=0.8.2",
    "hydra-core>=1.3.2",
    "imageio>=2.37.2",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "omegaconf>=2.3.0",
    "opencv-python>=4.13.0.92",
    "pyyaml>=6.0.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "wandb>=0.24.2",
    "wandb-osh>=1.2.2",
]
